# TNE

./: .gitignore  HANDOFF.md  P19b-contratto-dice-il-vero.patch  P20a-1-solo-grafica.patch  P20a-2-ingressi-dal-contratto.patch  P20b-ingressi-dei-nodi-dedicati.patch  P22-window-da-materialize.patch  P25-serializer-dichiara-gli-ingressi.patch  P27-i-source-ascoltano.patch  P29-il-motore-lega-i-parametri.patch  P30-gli-stub-non-mentono.patch  P31-i-reject-non-spariscono.patch  P35-cosmesi-onError-ui.patch  P36-retry-prima-operazione.patch  P38-error-handler-fetta2a-accumulo.patch  P40-error-handler-fetta2b2-instrada.patch  P42-error-handler-nel-piano.patch  P43-error-handler-collettore.patch  P45-advanced-non-arriva-al-motore.patch  P47-troncati-quale-nodo.patch  P50-regole-eh-vocabolario.patch  P52-escludi-dal-log.patch  P54-retry-visibile.patch  P55-bridge-canale-controllo.patch  P58-disegno-nodo-script.patch  P59-nodo-script-fetta1.patch  P60-input-mancante-si-vede-prima.patch  P66-schema-dello-script.patch  P67-campi-dallo-script-nel-mapping.patch  P69-script-errori-e-grammatica.patch  consegna-fase13-step3.patch  consegna-ritocchi-estetici.patch  index.html  p10-archi-orfani.patch  package-lock.json  package.json
src-tauri/: Cargo.toml  pipeline.ffplan  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/docs/: DISEGNO-error-handling.md  RICOGNIZIONE-gestione-errori.md  TODO-arco-dataset.md  TODO.md  architettura-pipeline.md  contratto-porte.md  design-linguaggio-espressioni.md  design-materialize-registry.md  design-nodo-script.md  design-union.md  design-validazione.md  expr-ir-schema.md  inventario-nodi.md  materialize_integrazione.md  monitoring-schema.md  node-spec.md
src-tauri/src/: db_stream.rs  db_transactions.rs  lib.rs  main.rs  memory_monitor.rs
src-tauri/src/engine/: abort.rs  bridge.rs  bus.rs  datasets.rs  errors.rs  events.rs  executor.rs  expr.rs  expr_functions.rs  (+7 more)
(+235 files in other folders)
