[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = [ "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }


[dependencies]
serde_json = "1.0"
serde      = { version = "1.0", features = ["derive"] }
log        = "0.4"
tauri      = { version = "2.11.2", features = [] }
tauri-plugin-log    = "2"
tauri-plugin-fs     = { version = "2.5.1", features = ["watch"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell  = "2.3.5"
base64     = "0.22"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "builder", "hostname",] }
rumqttc = { version = "0.24", features = ["use-rustls"] }
hmac            = "0.12"
sha2            = "0.10"
sha1            = "0.10"
hex             = "0.4"
reqwest         = { version = "0.12", features = ["json"] }
hyper           = { version = "1",    features = ["full"] }
http-body-util  = "0.1"
hyper-util      = { version = "0.1",  features = ["tokio"] }
ssh2 = "0.9"
futures = "0.3"
sysinfo = "0.30"
regex = "1"

# ── Database ───────────────────────────────────────────────────────
sqlx = { version = "0.7", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "mysql",
  "sqlite",
  "json",
  "chrono",
  "uuid",
  "rust_decimal",
] }
chrono       = { version = "0.4", features = ["serde"] }
uuid         = { version = "1",   features = ["serde"] }
rust_decimal = { version = "1",   features = ["serde-float"] }
urlencoding  = "2.1"
tokio        = { version = "1",   features = ["full"] }
# ── FTP / SFTP ─────────────────────────────────────────────────────

suppaftp     = { version = "6", features = ["async", "async-native-tls"] }
futures-util = { version = "0.3", features = ["io"] }
